--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
-  % not using the tag 'cuz they haven't published my Unicode fix yet
-  {cqerl, ".*", {git, "git://github.com/cqerl/cqerl.git", {branch, "master"}}},
   png
-  ]}.
+]}.
 
 {shell, [
   % {config, "config/sys.config"},
@@ -19,7 +17,7 @@
 ]}.
 
 {relx, [{release, {orderbackend, "0.0.1"},
-         [orderbackend, png],
+         [orderbackend, png, mnesia],
          [{include_src, false}]},
 
         {dev_mode, true},
