--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,6 @@
 version: '3.7'
 
 services:
-  cassandra:
-    image: cassandra:3.11.10
-    ports:
-      - "9042:9042"
-    expose:
-      - "9042"
-    restart: unless-stopped
-    volumes:
-      - /var/lib/cassandra/data:/var/lib/cassandra/data
-      - /etc/cassandra/conf:/etc/cassandra
-
   gluster:
     image: gluster/gluster-centos:gluster4u0_centos7
     ports:
@@ -36,19 +25,15 @@ services:
     ports:
       - "1746:1746"
       - "1747:1747/udp"
-    links:
-      - cassandra
     restart: unless-stopped
     volumes:
-      - /var/log/order:/var/log/order
       - /data/brick1/gv0/file_storage:/data/brick1/gv0/file_storage
+      - /var/order/db:/var/order/db
     depends_on:
-      - cassandra
       - gluster
     secrets:
       - tls_fullchain
       - tls_privkey
-      - cassandra_password
 
 networks:
   default:
@@ -59,5 +44,3 @@ secrets:
     file: ~/fullchain.pem
   tls_privkey:
     file: ~/privkey.pem
-  cassandra_password:
-    file: ~/cassandra_password
